--- a/_notebooks/2024-04-19-ArrayLesson.ipynb
+++ b/_notebooks/2024-04-19-ArrayLesson.ipynb
@@ -11,7 +11,6 @@
     "title: Unit 6.1 - 6.3 Focused on Arrays and Array Examination\n",
     "description: Covering Arrays (Unit 6.1-6.3)\n",
     "type: hacks\n",
-    "permalink: /ArraysLesson\n",
     "---"
    ]
   },
@@ -341,39 +340,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "16"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
     }
    ],
    "source": [
-    "/** Returns the sum of the entries in the one-dimensional array arr.\n",
-    " */ \n",
-    "\n",
-    "int [] arr1 = {1, 3, 2, 7, 3};\n",
-    "\n",
-    "public static int arraySum(int[] arr) {\n",
-    "    int sum = 0;\n",
-    "    for (int elem : arr1) {\n",
-    "        sum += elem;\n",
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        int[] arr = {1, 3, 2, 7, 3};\n",
+    "        int sum = arraySum(arr);\n",
+    "        System.out.println(sum);\n",
     "    }\n",
-    "return sum;\n",
+    "\n",
+    "    public static int arraySum(int[] arr) {\n",
+    "        int sum = 0;\n",
+    "        for (int elem : arr) {\n",
+    "            sum += elem;\n",
+    "        }\n",
+    "        return sum;\n",
+    "    }\n",
     "}\n",
     "\n",
-    "arraySum(null)\n"
+    "Main.main(null)"
    ]
   },
   {
@@ -388,11 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -406,38 +397,38 @@
     }
    ],
    "source": [
-    "// public class arr2Dsums {\n",
-    "//     public static void main(String[] args) {\n",
-    "//         int[][] arr2D = {{1, 3, 2, 7, 3}, {10, 10, 4, 6, 2}, {5, 3, 5, 9, 6}, {7, 6, 4, 2, 1}};\n",
-    "//         int[] result = rowSums(arr2D);\n",
-    "//         for (int num : result) {\n",
-    "//             System.out.println(num);\n",
-    "//         }\n",
-    "//     }\n",
+    "public class arr2Dsums {\n",
+    "    public static void main(String[] args) {\n",
+    "        int[][] arr2D = {{1, 3, 2, 7, 3}, {10, 10, 4, 6, 2}, {5, 3, 5, 9, 6}, {7, 6, 4, 2, 1}};\n",
+    "        int[] result = rowSums(arr2D);\n",
+    "        for (int num : result) {\n",
+    "            System.out.println(num);\n",
+    "        }\n",
+    "    }\n",
     "\n",
-    "//     public static int[] rowSums(int[][] arr2D) {\n",
-    "//         if (arr2D == null) {\n",
-    "//             return new int[0];\n",
-    "//         }\n",
-    "//         int[] sums = new int[arr2D.length];\n",
-    "//         int rowNum = 0;\n",
-    "//         for (int[] row : arr2D) {\n",
-    "//             sums[rowNum] = arraySum(row);\n",
-    "//             rowNum++;\n",
-    "//         }\n",
-    "//         return sums;\n",
-    "//     }\n",
+    "    public static int[] rowSums(int[][] arr2D) {\n",
+    "        if (arr2D == null) {\n",
+    "            return new int[0];\n",
+    "        }\n",
+    "        int[] sums = new int[arr2D.length];\n",
+    "        int rowNum = 0;\n",
+    "        for (int[] row : arr2D) {\n",
+    "            sums[rowNum] = arraySum(row);\n",
+    "            rowNum++;\n",
+    "        }\n",
+    "        return sums;\n",
+    "    }\n",
     "\n",
-    "//     public static int arraySum(int[] arr) {\n",
-    "//         int sum = 0;\n",
-    "//         for (int num : arr) {\n",
-    "//             sum += num;\n",
-    "//         }\n",
-    "//         return sum;\n",
-    "//     }\n",
-    "// }\n",
+    "    public static int arraySum(int[] arr) {\n",
+    "        int sum = 0;\n",
+    "        for (int num : arr) {\n",
+    "            sum += num;\n",
+    "        }\n",
+    "        return sum;\n",
+    "    }\n",
+    "}\n",
     "\n",
-    "// arr2Dsums.main(null)"
+    "arr2Dsums.main(null)"
    ]
   },
   {
@@ -452,11 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -479,69 +466,62 @@
     }
    ],
    "source": [
-    "// public class arr2Dsums {\n",
-    "//     public static void main(String[] args) {\n",
-    "//         int[][] arr2D = {{1, 3, 2, 7, 3}, {10, 10, 4, 6, 2}, {5, 3, 5, 9, 6}, {7, 6, 4, 2, 1}};\n",
-    "//         int[][] arr12D = {{1, 1, 5, 3, 4}, {12, 7, 6, 1, 9}, {8, 11, 10, 2, 5}, {3, 2, 3, 0, 6}};\n",
+    "public class arr2Dsums {\n",
+    "    public static void main(String[] args) {\n",
+    "        int[][] arr2D = {{1, 3, 2, 7, 3}, {10, 10, 4, 6, 2}, {5, 3, 5, 9, 6}, {7, 6, 4, 2, 1}};\n",
+    "        int[][] arr12D = {{1, 1, 5, 3, 4}, {12, 7, 6, 1, 9}, {8, 11, 10, 2, 5}, {3, 2, 3, 0, 6}};\n",
     "        \n",
-    "//         System.out.println(\"Array 1: \");\n",
-    "//         int[] result = rowSums(arr2D);\n",
-    "//         for (int num : result) {\n",
-    "//             System.out.println(num);\n",
-    "//         }\n",
+    "        System.out.println(\"Array 1: \");\n",
+    "        int[] result = rowSums(arr2D);\n",
+    "        for (int num : result) {\n",
+    "            System.out.println(num);\n",
+    "        }\n",
     "\n",
-    "//         System.out.println(\"\\nArray 2: \");\n",
-    "//         int[] result1 = rowSums(arr12D);\n",
-    "//         for (int num : result1) {\n",
-    "//             System.out.println(num);\n",
-    "//         }\n",
+    "        System.out.println(\"\\nArray 2: \");\n",
+    "        int[] result1 = rowSums(arr12D);\n",
+    "        for (int num : result1) {\n",
+    "            System.out.println(num);\n",
+    "        }\n",
     "        \n",
-    "//         boolean diverse = isDiverse(arr2D);\n",
-    "//         System.out.println(\"\\nDiverse: \" + diverse);\n",
-    "//     }\n",
+    "        boolean diverse = isDiverse(arr2D);\n",
+    "        System.out.println(\"\\nDiverse: \" + diverse);\n",
+    "    }\n",
     "\n",
-    "//     public static int[] rowSums(int[][] arr2D) {\n",
-    "//         if (arr2D == null) {\n",
-    "//             return new int[0];\n",
-    "//         }\n",
-    "//         int[] sums = new int[arr2D.length];\n",
-    "//         int rowNum = 0;\n",
-    "//         for (int[] row : arr2D) {\n",
-    "//             sums[rowNum] = arraySum(row);\n",
-    "//             rowNum++;\n",
-    "//         }\n",
-    "//         return sums;\n",
-    "//     }\n",
+    "    public static int[] rowSums(int[][] arr2D) {\n",
+    "        if (arr2D == null) {\n",
+    "            return new int[0];\n",
+    "        }\n",
+    "        int[] sums = new int[arr2D.length];\n",
+    "        int rowNum = 0;\n",
+    "        for (int[] row : arr2D) {\n",
+    "            sums[rowNum] = arraySum(row);\n",
+    "            rowNum++;\n",
+    "        }\n",
+    "        return sums;\n",
+    "    }\n",
     "\n",
-    "//     public static int arraySum(int[] arr) {\n",
-    "//         int sum = 0;\n",
-    "//         for (int num : arr) {\n",
-    "//             sum += num;\n",
-    "//         }\n",
-    "//         return sum;\n",
-    "//     }\n",
+    "    public static int arraySum(int[] arr) {\n",
+    "        int sum = 0;\n",
+    "        for (int num : arr) {\n",
+    "            sum += num;\n",
+    "        }\n",
+    "        return sum;\n",
+    "    }\n",
     "\n",
-    "//     public static boolean isDiverse(int[][] arr2D) {\n",
-    "//         int[] sums = rowSums(arr2D);\n",
-    "//         for (int i = 0; i < sums.length; i++) {\n",
-    "//             for (int j = i + 1; j < sums.length; j++) {\n",
-    "//                 if (sums[i] == sums[j]) {\n",
-    "//                     return false;\n",
-    "//                 }\n",
-    "//             }\n",
-    "//         }\n",
-    "//         return true;\n",
-    "//     }\n",
-    "// }\n",
+    "    public static boolean isDiverse(int[][] arr2D) {\n",
+    "        int[] sums = rowSums(arr2D);\n",
+    "        for (int i = 0; i < sums.length; i++) {\n",
+    "            for (int j = i + 1; j < sums.length; j++) {\n",
+    "                if (sums[i] == sums[j]) {\n",
+    "                    return false;\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "        return true;\n",
+    "    }\n",
+    "}\n",
     "\n",
-    "// arr2Dsums.main(null)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Code works and returns the above results but breaks when i make so commented it out."
+    "arr2Dsums.main(null)"
    ]
   }
  ],
@@ -555,7 +535,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "17.0.9+9-Ubuntu-120.04"
   }
